# RankChem

./: .copier-answers.yml  LICENSE  LIST RIGHT.ipynb  README.md  Still to do.txt  app.py  conda_requirements.txt  environment.yml  molecule.xyz  packages.txt  pyproject.toml  requirements.txt  setup.py  tox.ini
.conda/conda-meta/: bzip2-1.0.8-h93a5062_5.json  ca-certificates-2024.2.2-hf0a4a13_0.json  history  libffi-3.4.2-h3422bc3_5.json  libsqlite-3.45.3-h091b4b1_0.json  libzlib-1.2.13-hfb2fe0b_6.json  ncurses-6.5-hb89a1cb_0.json  openssl-3.3.0-hfb2fe0b_3.json  pip-24.0-pyhd8ed1ab_0.json  python-3.10.14-h2469fbe_0_cpython.json  readline-8.2-h92ec313_1.json  setuptools-70.0.0-pyhd8ed1ab_0.json  tk-8.6.13-h5083fa2_1.json  tzdata-2024a-h0c530f3_0.json  wheel-0.43.0-pyhd8ed1ab_1.json  xz-5.2.6-h57fd34a_0.json
.conda/etc/: aau_token
.conda/include/: curses.h  cursesapp.h  cursesf.h  cursesm.h  cursesp.h  cursesw.h  cursslk.h  eti.h  etip.h  fakesql.h  ffi.h  form.h  itcl.h  itcl2TclOO.h  itclDecls.h  itclInt.h  itclIntDecls.h  itclMigrate2TclCore.h  itclTclIntStubsFcn.h  ks_names.h  menu.h  mysqlStubs.h  ncurses_dll.h  odbcStubs.h  panel.h  sqlite3.h  tclInt.h  tclIntDecls.h  tclIntPlatDecls.h  tclOOInt.h  tclOOIntDecls.h  tclPort.h  tclThread.h  tclUnixPort.h  tdbc.h  tdbcInt.h  term.h  term_entry.h  termcap.h  tk3d.h  (+31 more)
.conda/include/lzma/: base.h  version.h
.conda/include/openssl/: configuration.h  opensslv.h  pkcs12.h
.conda/include/python3.10/: patchlevel.h  pyconfig.h
.conda/include/readline/: chardefs.h  history.h  keymaps.h  readline.h  rlconf.h  rltypedefs.h  tilde.h
.conda/man/man1/: bzcmp.1  bzfgrep.1  bzless.1
.conda/share/doc/readline/: CHANGES  INSTALL  README
.conda/share/doc/xz/: AUTHORS  NEWS  README  THANKS  lzma-file-format.txt
.conda/share/info/: rluserman.info
.conda/share/man/man1/: python3.10.1  xz.1  xzdiff.1  xzgrep.1
.conda/share/man/man3/: history.3  readline.3
.conda/share/terminfo/61/: abm85  abm85e  abm85h  abm85h-old  adm36  altos2  altos3  ampex210
.conda/share/terminfo/63/: cit101e  cit101e-132  cit101e-n  cit101e-n132  crt
.conda/share/terminfo/64/: ddr  dec-vt220
.conda/share/terminfo/65/: emu-220
.conda/share/terminfo/67/: go140  go140w  go225
.conda/share/terminfo/68/: hazel  hp2392  hp2641a  hp300h  hp700-wy  hp9845  hp98550  hpex  hpsub
.conda/share/terminfo/69/: ims-ansi
.conda/share/terminfo/6b/: kt7
.conda/share/terminfo/6d/: mai  mt4520-rv
.conda/share/terminfo/6e/: ncsa  ncsa-m  ncsa-m-ns  ncsa-ns  ncsa-vt220  netbsd6  news-29  news-29-euc  news-29-sjis  news-33  news-33-euc  news-33-sjis  news-42  news-42-euc  news-42-sjis  news-old-unk  news-unk  news28  news29  nwp512  nwp512-a  nwp513  nwp513-a  nwp517  nwp517-w
.conda/share/terminfo/6f/: opus3n1+  otek4115
.conda/share/terminfo/70/: pcmw  pcvt25  pcvt25-color  pcvt25w  pcvt28  pcvt28w  pcvt35  pcvt35w  pcvt40  pcvt40w  pcvt43  pcvt43w  pcvt50  pcvt50w  pcvtXX
.conda/share/terminfo/74/: ti916  ti916-132  ti916-8  ti916-8-132  tvi9065  tvi910  tvi910+  tvi912  tvi912b  tvi912b-2p  tvi912b-2p-mc  tvi912b-2p-p  tvi912b-2p-unk  tvi912b-mc  tvi912b-p  tvi912b-unk  tvi912b-vb  tvi912b-vb-mc  tvi912b-vb-p  tvi912b-vb-unk  tvi912cc  tvi920b  tvi920b-2p  tvi920b-2p-mc  tvi920b-2p-p  tvi920b-2p-unk  tvi920b-mc  tvi920b-p  tvi920b-unk  tvi920b-vb  tvi920b-vb-mc  tvi920b-vb-p  tvi920b-vb-unk  tvi921  tvi924  tvi92B  tvi92D  tvipt
.conda/share/terminfo/75/: uniterm  uts30
.conda/share/terminfo/76/: versaterm  vt200-js  vt220  vt220-8bit  vt220-base  vt220-nam  vt220-old  vt220-w  vt220d  vt320  vt320-k311  vt320-nam  vt320-w  vt320-w-nam  vt320nam  vt340  vt400  vt420  vt420f  vt420pc  vt420pcdos  vt510  vt510pc  vt510pcdos  vt520  vt520ansi  vt525
.conda/share/zoneinfo/: iso3166.tab  leapseconds  tzdata.zi  zone.tab  zone1970.tab  zonenow.tab
.conda/ssl/: cacert.pem  openssl.cnf.dist
.conda/ssl/misc/: CA.pl  tsget.pl
assets/: setup.py
docs/source/: conf.py
notebooks/: README.md  molecule.xyz  project_report.ipynb
scripts/Streamlit/: highlightinterface.py
src/Rankchem/: Highlighting.py  Ranking.py  __init__.py  app.py  global.ipynb  iterations LIST RIGHT.ipynb  molecule.xyz  molecule_0.xyz  molecule_1.xyz  molecule_2.xyz  molecule_3.xyz  requirements.txt  temp.xyz  test.ipynb
src/Rankchem/.streamlit/: config.toml
src/Rankchem/for streamlit/: Highlighting.py  Ranking.py
src/Rankchem/for_streamlit/: Highlighting.py  Ranking.py  __init__.py
tests/: test_app.py  test_average.py  test_calculate_descriptor.py  test_calculate_fukui.py  test_example_module.py  test_get_max_fukui_avg.py  test_main.py  test_rank_descriptors.py  test_smiles_to_xyz.py  test_visualize_molecule.py
(+10 files in other folders)
