[build-system] 
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/Rankchem"]

[project]
name = "RankChem"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
description = "RankChem project"
dependencies = [
     "rdkit",
     "morfeus-ml",
     "pyvistaqt",
     "numpy",
     "py3Dmol",
     "streamlit",
     "stmol"
]


authors = [
    {name = "Emma Kappeler", email = "emma.kappeler@epfl.ch"},
    {name = "Ludovica Fracassi", email = "ludovica.fracassi@epfl.ch"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]

[project.urls]
source = "https://github.com/kappelemma/RankChem"
tracker = "https://github.com/kappelemma/RankChem/issues"

[project.optional-dependencies]
test = [
    "hypothesis",
    "pytest",
    "pytest-cov",
    "tox",
    "genbadge[coverage]",
]
doc = [
    "furo",
    "myst-parser",
    "sphinx>=5",
    "sphinx-copybutton",
]

[tool.hatch.version]
path = "src/Rankchem/__init__.py"
version = "0.1.1"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    '__init__.py'
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]
